# excel2budget.py

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  FinancialDomainModel.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: cli.py  logging_config.py  main.py  settings.py
backend/app/core/: adapters.py  api_models.py  domain.py  functions.py  types.py
backend/app/documentation/: control_table.py  description_generator.py  diagram_generator.py  module.py  user_instruction.py
backend/app/persistence/: config_store.py
backend/app/routers/: configurations.py  documentation.py  templates.py
backend/app/templates/: registry.py
backend/app/templates/afas/: budget.py
backend/app/templates/exact/: budget.py
backend/app/templates/twinfield/: budget.py
backend/tests/: conftest.py  strategies.py  test_integration.py  test_property_adapters.py  test_property_api_response_consistency.py  test_property_cli.py  test_property_config_crud.py  test_property_documentation.py  test_property_domain_collections.py  test_property_domain_copy.py  test_property_domain_immutability.py  test_property_domain_literals.py  test_property_domain_serialization.py  test_property_functions_eliminate.py  test_property_functions_filter.py  test_property_functions_variance.py  test_property_logging.py  test_property_settings.py  test_property_template_errors.py  test_property_template_registry.py  test_property_type_pipeline.py  test_property_writers.py
docs/: FinancialDomainModel.md  api.md  deployment.md  (+5 more)
(+159 files in other folders)
