[project]
name = "data-conversion-tool-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "duckdb>=1.1.0",
    "uvicorn>=0.32.0",
    "openpyxl>=3.1.5",
    "python-json-logger>=3.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.115.0",
    "pytest>=9.0.3",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
